# oura-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: daily_archive.sh  quickstart.py
src/oura_cli/: __init__.py  auth.py  cli.py  client.py  formatters.py  summary.py
tests/: test_auth.py  test_cli.py  test_client.py  test_formatters.py  test_security.py  test_summary.py
