[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oura-cli"
dynamic = ["version"]
description = "A simple, stdlib-only CLI and Python client for the Oura Ring v2 REST API (PAT auth)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Anh Dinh", email = "thienanh@gmail.com" }]
keywords = ["oura", "oura-ring", "health", "wearable", "rest", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.5",
]

[project.urls]
Homepage      = "https://github.com/anhdinh/oura-cli"
Repository    = "https://github.com/anhdinh/oura-cli"
Issues        = "https://github.com/anhdinh/oura-cli/issues"
"Oura API"    = "https://cloud.ouraring.com/v2/docs"

[project.scripts]
oura = "oura_cli.cli:main"

[tool.hatch.version]
path = "src/oura_cli/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/oura_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
